feat: add accordeon items, make items checked/unchecked  (Sun, Mar 12, 2023 05:11 PM)

--- a/index.html
+++ b/index.html
@@ -4,9 +4,42 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>CSSBayan</title>
 </head>
 <body>
-    
+    <div class="wrapper">
+        <h1 class="wrapper__title">CSSBAYAN by <a href="http://www.suprocket.ru/">Suprocket</a></h1>
+        <ul class="accordion">
+            <li>
+                <label for="1stMeme">Question <span>+</span></label>
+                <input type="radio" name="checker" id="1stMeme" checked>
+                <div class="content">
+                    <img src="#" alt="first-meme-image">
+                </div>
+            </li>
+            <li>
+                <label for="2ndMeme">Question <span>+</span></label>
+                <input type="radio" name="checker" id="2ndMeme">
+                <div class="content">
+                    <img src="#" alt="first-meme-image">
+                </div>
+            </li>
+            <li>
+                <label for="3rdMeme">Question <span>+</span></label>
+                <input type="radio" name="checker" id="3rdMeme">
+                <div class="content">
+                    <img src="#" alt="first-meme-image">
+                </div>
+            </li>
+            <li>
+                <label for="4thMeme">Question <span>+</span></label>
+                <input type="radio" name="checker" id="4thMeme">
+                <div class="content">
+                    <img src="#" alt="first-meme-image">
+                </div>
+            </li>
+        </ul>
+    </div>
 </body>
 </html>
