--- a/cssBayan/index.html
+++ b/cssBayan/index.html
@@ -9,34 +9,34 @@
 </head>
 <body>
     <div class="wrapper">
-        <h1 class="wrapper__title">CSSBAYAN by <a href="http://www.suprocket.ru/">Suprocket</a></h1>
+        <h1 class="wrapper__title">CSSBAYAN by <a class="wrapper__title-link" href="http://www.suprocket.ru/">Suprocket</a></h1>
         <ul class="accordion">
             <li>
-                <label for="1stMeme">Question <span>+</span></label>
+                <label for="1stMeme">Junior devs writing comments <span>+</span></label>
                 <input type="radio" name="checker" id="1stMeme" checked>
                 <div class="content">
-                    <img src="#" alt="first-meme-image">
+                    <img src="images/first.jpg" alt="first-meme-image">
                 </div>
             </li>
             <li>
-                <label for="2ndMeme">Question <span>+</span></label>
+                <label for="2ndMeme">Web Development Fundamentals<span>+</span></label>
                 <input type="radio" name="checker" id="2ndMeme">
                 <div class="content">
-                    <img src="#" alt="first-meme-image">
+                    <img src="images/second.jpg" alt="first-meme-image">
                 </div>
             </li>
             <li>
-                <label for="3rdMeme">Question <span>+</span></label>
+                <label for="3rdMeme">Bad idea to become a fullstack developer<span>+</span></label>
                 <input type="radio" name="checker" id="3rdMeme">
                 <div class="content">
-                    <img src="#" alt="first-meme-image">
+                    <img src="images/third.jpg" alt="first-meme-image">
                 </div>
             </li>
             <li>
-                <label for="4thMeme">Question <span>+</span></label>
+                <label for="4thMeme">Remember the deadline<span>+</span></label>
                 <input type="radio" name="checker" id="4thMeme">
                 <div class="content">
-                    <img src="#" alt="first-meme-image">
+                    <img src="images/last.jpg" alt="first-meme-image">
                 </div>
             </li>
         </ul>
