fix: change label for, img,alt for other memes (Mon, Mar 13, 2023 01:48 AM)

--- a/cssBayan/index.html
+++ b/cssBayan/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="wrapper">
-        <h1 class="wrapper__title">CSSBAYAN by <a class="wrapper__title-link" href="http://www.suprocket.ru/">Suprocket</a></h1>
+        <h1 class="wrapper__title">CSSBAYAN</h1>
         <ul class="accordion">
             <li>
                 <div class="meminfo">
@@ -18,10 +18,10 @@
                         <label for="1stMeme">Junior devs writing comments </label>
                     </div>
                     <div class="meminfo__plus">
-                        <i class="fa-solid fa-plus"></i>
+                        <i class="fa-solid fa-plus fa-xl"></i>
                     </div>
                     <div class="meminfo__minus">
-                        <i class="fa-solid fa-minus"></i>
+                        <i class="fa-solid fa-minus fa-xl"></i>
                     </div>
                 </div>
                 <input class="meminfo__input" type="checkbox" name="checker" id="1stMeme" checked>
@@ -29,27 +29,57 @@
                     <img src="images/first.jpg" alt="first-meme-image">
                 </div>
             </li>
-            <!-- <li>
-                <label for="2ndMeme">Web Development Fundamentals<span>+</span></label>
-                <input type="checkbox" name="checker" id="2ndMeme">
+            <li>
+                <div class="meminfo">
+                    <div class="meminfo__title">
+                        <label for="2ndMeme">Web Development Fundamentals</label>
+                    </div>
+                    <div class="meminfo__plus">
+                        <i class="fa-solid fa-plus fa-xl"></i>
+                    </div>
+                    <div class="meminfo__minus">
+                        <i class="fa-solid fa-minus fa-xl"></i>
+                    </div>
+                </div>
+                <input class="meminfo__input" type="checkbox" name="checker" id="2ndMeme">
                 <div class="content">
-                    <img src="images/second.jpg" alt="first-meme-image">
+                    <img src="images/second.jpg" alt="second-meme-image">
                 </div>
             </li>
             <li>
-                <label for="3rdMeme">Bad idea to become a fullstack developer<span>+</span></label>
-                <input type="checkbox" name="checker" id="3rdMeme">
+                <div class="meminfo">
+                    <div class="meminfo__title">
+                        <label for="3rdMeme">Bad idea to become a fullstack developer</label>
+                    </div>
+                    <div class="meminfo__plus">
+                        <i class="fa-solid fa-plus fa-xl"></i>
+                    </div>
+                    <div class="meminfo__minus">
+                        <i class="fa-solid fa-minus fa-xl"></i>
+                    </div>
+                </div>
+                <input class="meminfo__input" type="checkbox" name="checker" id="3rdMeme">
                 <div class="content">
-                    <img src="images/third.jpg" alt="first-meme-image">
+                    <img src="images/third.jpg" alt="third-meme-image">
                 </div>
             </li>
             <li>
-                <label for="4thMeme">Remember the deadline<span>+</span></label>
-                <input type="checkbox" name="checker" id="4thMeme">
-                <div class="content">
-                    <img src="images/last.jpg" alt="first-meme-image">
+                <div class="meminfo">
+                    <div class="meminfo__title">
+                        <label for="4thMeme">Remember the deadline</label>
+                    </div>
+                    <div class="meminfo__plus">
+                        <i class="fa-solid fa-plus fa-xl"></i>
+                    </div>
+                    <div class="meminfo__minus">
+                        <i class="fa-solid fa-minus fa-xl"></i>
+                    </div>
                 </div>
-            </li> -->
+                <input class="meminfo__input" type="checkbox" name="checker" id="4thMeme">
+                <div class="content">
+                    <img src="images/last.jpg" alt="fourth-meme-image">
+                </div>
+            </li>
         </ul>
     </div>
 </body>
